@@ -18,18 +18,6 @@ macDetectionVlan = 4
 mode = testing
 macSearchesMaxNb = 30
 macSearchesSleepInterval = 2
-minOSVersion_Cisco::Catalyst_2900XL = 12.0(5)WC15
-minOSVersion_Cisco::Catalyst_2950 = 12.1(22)EA10
-minOSVersion_Cisco::Catalyst_2960 = 12.2(25)SEE2
-minOSVersion_Cisco::Catalyst_2970 = 12.2(25)SEE2
-minOSVersion_Cisco::Catalyst_3500XL = 12.0(5)WC15
-minOSVersion_Cisco::Catalyst_3550 = 12.2(25)SEE2
-minOSVersion_Cisco::Catalyst_3560 = 12.2(25)SEE2
-minOSVersion_Intel::Express_460 = 4.60.89
-minOSVersion_Intel::Express_530 = 1.00.23
-minOSVersion_Accton::ES3526XA = 2.3.3.5
-minOSVersion_Dell::PowerConnect3424 = 112
-minOSVersion_3COM::NJ220 = 2.0.23
 
 # Database
 switchTypesToExclude = 
