@@ -27,6 +27,12 @@ use Log::Log4perl;
 use Net::SNMP;
 use base ('pf::SNMP::Accton');
 
+sub getMinOSVersion {
+    my ($this) = @_;
+    my $logger = Log::Log4perl::get_logger(ref($this));
+    return '2.3.3.5';
+}
+
 1;
 
 # vim: set shiftwidth=4:
